--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-MONGODB_URI=mongodb://localhost:27018
-MONGODB_DATABASE=spendings
-MONGODB_USER=db
-MONGODB_PASS=password
+DB_SOURCE=postgresql://user:password@spendings_db:5432/spendings_db?sslmode=disable
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=spendings_db
 
 TELEGRAM_BOT_TOKEN=7501593709:AAHMHvYz-sDljmx8BgMAc4Bdtpdt5Gz4fMs
