--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    container_name: spendingsbackend
+    container_name: spendings_backend
     build:
       context: .
       dockerfile: Dockerfile
@@ -24,6 +24,20 @@ services:
       - "5432:5432"
     env_file:
       - .env
+    networks:
+      - app-network
+
+  grafana:
+    build:
+      context: ./grafana
+      dockerfile: Dockerfile
+    container_name: spendings_grafana
+    ports:
+      - "3003:3000"
+    env_file:
+      - ./grafana/.env
+    depends_on:
+      - db
     networks:
       - app-network
 
